更新脚本, request与response 文件名规范化, 新增用户注册接口
